[package]
	authors = ["Robert Bennett"]
	description = """
Bindings to libjsonnet (https://jsonnet.org/), a domain specific
configuration language that helps you define JSON data.
"""
	documentation = "https://docs.rs/jsonnet-rs-docsrs-build"
	edition = "2018"
	keywords = ["json", "jsonnet"]
	license = "Apache-2.0"
	name = "jsonnet-rs-docsrs-build"
	readme = "README.md"
	repository = "https://github.com/rben01/rust-jsonnet.git"
	version = "0.18.0"

[lib]
	name = "jsonnet"

[dependencies]
	jsonnet-sys = { path = "jsonnet-sys", version = "0.17.0" }
	libc = "0.2"

[dev-dependencies]
	clap = "2.31"
